Renaming wadis7065 to sbobet Pantip เว็บไซต์ที่เชื่อถือได้ [Play168]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wadis7065",
+  "name": "sbobet Pantip เว็บไซต์ที่เชื่อถือได้ [Play168]",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "sbobet Pantip เว็บไซต์ที่เชื่อถือได้ [Play168] ⭐ สร้างรายได้โอกาสที่เพิ่มเงินในกระเป๋าง่ายๆ มีทุนให้เล่นไม่ต้องเสียเงินเอง แจกเครดิต เข้าเล่นเกมฟรี สำหรับใครที่สมัครเข้ามาเล่นเกมใหม่ กับ slot เว็บตรงแตกง่าย รวมค่ายเกมแจกเงิน เลือกใช้เงินเล่นเกมแบบไม่ต้องฝาก เพิ่มโอกาสในการเดิมพัน เว็บสล็อตแตกง่ายที่สุด",
